<resources>
    <string name="app_name">CarFinanceCalculator</string>

    <!-- The names of the payment frequency options.
        Usage: appear as the text on the iOS type selector and
        on the red tag trailing the payment amount -->
    <string name="monthly">Monthly</string>
    <string name="bi_weekly">Bi-Weekly</string>
    <string name="weekly">Weekly</string>

    <!-- Appears on the red tag next to the amount when
        the total down payment (= cash down + trade in)
        is equal or greater than the vehicle price-->
    <string name="no_loan_required">No Loan Required</string>

    <!-- The cash amount put as a down payment.
      Usage: static text naming an associated input field -->
    <string name="cash_down">Cash down</string>

    <!-- The amount the party receives for their current vehicle.
      Usage: static text naming an associated input field -->
    <string name="trade_in">Trade In</string>

    <!--  NOTE: The sum of the cash down and trade in amounts form total down payment amount. -->


    <!-- The template for payment amount containing dollar amount as well as payment period
        E.g. '$2,252* Monthly' or '$1,234* Bi-Weekly' etc -->
    <string name="payment_amount_template">%1$s* %2$s</string>

    <!-- The template for payment term expressed in months, ending with comma
        E.g. '24 Months,' or '72 Months,' etc. -->
    <string name="payment_term_template">%1$s %2$s,</string>

    <!-- The template for payment rate percentage trailed with the word 'Financing'
        E.g. '9.99% Financing' or '6.99% Financing' etc. -->
    <string name="payment_rate_template">%1$s %2$s</string>

    <!-- The template for payment term min and max boundaries, trailed with the abbreviation
        for word 'Months' ('mo' in English)
        E.g. '24 mo' or '72 mo' etc.
        Usage: labels for the ends of the seek bar -->
    <string name="payment_term_months_template">%1$s %2$s</string>


    <string name="months">Months</string>
    <string name="month_abbreviated">mo</string>
    <string name="financing">Financing</string>

</resources>
