<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_vehicle_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="48,801"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$736* Monthly"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="84 Months"/>

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6.99% Financing"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_min_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="36 mo"/>

        <TextView
            android:id="@+id/tv_max_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="84 mo"/>

    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly"/>

        <RadioButton
            android:id="@+id/rb_biweekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bi_weekly"/>

        <RadioButton
            android:id="@+id/rb_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cash_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_down"/>

        <EditText
            android:id="@+id/tx_cash_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_trade_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_in"/>

        <EditText
            android:id="@+id/tx_trade_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$0"/>

    </LinearLayout>

</LinearLayout>