<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:elevation="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_vehicle_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:text="$48,801"/>

            <include layout="@layout/divider_line" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_payment_amount"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="56dp"
                    android:paddingTop="18dp"
                    android:paddingLeft="8dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/red_tag"
                    android:text="$736* No Loan Required"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:id="@+id/tv_term"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="84 Months"/>

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="6.99% Financing"/>

                </LinearLayout>

                <ToggleButton
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginRight="4dp"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/ic_collapse"/>

            </LinearLayout>

            <include layout="@layout/divider_line" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:id="@+id/tv_min_term"
                    style="@style/term_month_seek_bar_label"
                    android:text="36 mo" />

                <TextView
                    android:id="@+id/tv_max_term"
                    style="@style/term_month_seek_bar_label"
                    android:gravity="right"
                    android:text="84 mo"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_term_months"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <RadioGroup
                android:id="@+id/rg_payment_frequency"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/rb_monthly"
                    style="@style/ios_selector_button_style"
                    android:text="@string/monthly"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rb_biweekly"
                    style="@style/ios_selector_button_style"
                    android:text="@string/bi_weekly"/>

                <RadioButton
                    android:id="@+id/rb_weekly"
                    style="@style/ios_selector_button_style"
                    android:text="@string/weekly"/>

            </RadioGroup>

            <include layout="@layout/divider_line" />

            <include layout="@layout/downpayment_input_view" android:id="@+id/v_cash_down"/>

            <include layout="@layout/divider_line" />

            <include layout="@layout/downpayment_input_view" android:id="@+id/v_trade_in"/>

            <include layout="@layout/divider_line" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>